<resources>
    <string name="app_name">Minesweeper</string>
    <string name="flag_mode_switch">Flag Mode</string>
    <string name="game_name">MineQuest</string>
    <string name="start">New Game</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="newgame_desc">Press the new game button to start or reset game.</string>
    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>