<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <!--  Name of the app  -->

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/game_name"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="@+id/grid"
        android:textColor="#FFF"
        app:layout_constraintTop_toTopOf="parent" />


    <hu.ait.minesweeper.view.MineSweeperView
        android:id="@+id/grid"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/flagSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/flag_mode_switch"
        android:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="@+id/grid"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/grid" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintStart_toStartOf="@+id/grid"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/flag_mode_switch"
        app:srcCompat="@drawable/flag" />

    <TextView
        android:id="@+id/flagsRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="monospace"
        android:text=""
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:backgroundTint="#2E8B57"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/grid" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:backgroundTint="#2E8B57"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/grid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/grid"
        app:layout_constraintTop_toBottomOf="@+id/grid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="30dp"
        android:text="@string/newgame_desc"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/grid"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="@+id/grid"
        app:layout_constraintTop_toBottomOf="@+id/flagSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>